# ayora-challenge

./: .dockerignore  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  Makefile  README.md  compose.override.yaml  compose.yaml  pyproject.toml  requirements.txt  schema.yaml  serverless.yml
ayora/: conftest.py
ayora/config/: asgi.py  celery.py  docs.py  env.py  urls.py  wsgi.py
ayora/config/settings/: base.py  dev.py  prod.py  test.py
ayora/core/constants/: schedules.py
ayora/core/exceptions/: core.py
ayora/core/filters/: core.py
ayora/core/management/commands/: dev.py  setup.py  setup_periodic_tasks.py
ayora/core/mixins/: enums.py  exceptions.py  filters.py  managers.py  models.py  serializers.py
ayora/core/serializers/: __init__.py  health.py
ayora/core/services/: models.py
ayora/core/tests/: conftest.py
ayora/core/tests/fixtures/: core.py
ayora/core/tests/views/: test__core__views__health_check.py
ayora/core/types/: models.py  schedules.py
ayora/core/utils/: core.py  encoders.py  env.py  exceptions.py  loggers.py  paginators.py  responses.py  serializers.py  settings.py
ayora/core/views/: health.py
ayora/order/: urls.py
ayora/order/constants/: __init__.py  orders.py
ayora/order/enums/: orders.py
ayora/order/filters/: __init__.py  orders.py
ayora/order/managers/: __init__.py  orderitems.py  orderpayments.py  orders.py
ayora/order/migrations/: 0001_initial.py
ayora/order/mixins/models/: __init__.py  orders.py
ayora/order/models/: __init__.py  orderitems.py  orderpayments.py  orders.py
ayora/order/selectors/: __init__.py  orderitems.py  orderpayments.py  orders.py
ayora/order/serializers/: __init__.py  orderitems.py  orderpayments.py  orders.py
ayora/order/services/: __init__.py  orderitems.py  orderpayments.py  orders.py
ayora/order/tasks/: __init__.py  orders.py
ayora/order/tests/factories/: __init__.py  orderitems.py  orderpayments.py  orders.py
ayora/order/tests/fixtures/: __init__.py  orderitems.py  orderpayments.py  orders.py
ayora/order/tests/generators/: __init__.py  orderitems.py  orderpayments.py  orders.py
ayora/order/tests/views/: test__order__views__customer_order.py  test__order__views__customer_orders.py  test__order__views__refunds.py  test__order__views__restaurant_order.py  test__order__views__restaurant_orders.py
ayora/order/views/: __init__.py  orders.py
docker/django/: Dockerfile  entrypoint.sh  healthcheck.sh
